# lcdi2c

./: .gitignore  Kbuild  LICENSE.txt  Makefile  README.md  dkms.conf  i2clcd8574.c  i2clcd8574.h  i2clcd8574_lib.c  lcdi2c.c  lcdi2c.dts  lcdi2c.h  lcdi2c_main.c  lcdi2c_main.h  lcdlib.c  lcdlib.h  proof.c
examples/: README.md  driver.py  lcddev.py
examples/alphalcd/: dlcdi2c.py
examples/alphalcd-ruby/: dlcdi2c.rb
examples/linux-module-config/: README.md
examples/linux-module-config/etc/modprobe.d/: lcdi2c.conf
python-tools/: Makefile
python-tools/module/: README.md  pyproject.toml
python-tools/module/src/alphalcd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python-tools/module/src/lcdi2c/: alphalcd.py  lcddisp.py
